--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <div class="main-body">
             <div class="left-section">
                <p class="para">Facebook helps you connect and share with the <br> people in your life.</p>
-               <img class="image" src="fb1.png" alt="">
+               <img class="image" src="fb.jpeg" alt="">
 
             </div>
             <div class="right-section">
